# stm32mp135-gfx

./: .gitignore  README.md
firmware/cube/stm32mp135-cube/: .mxproject  stm32mp135-cube.ioc
firmware/cube/stm32mp135-cube/STM32CubeIDE/Application/: .cproject  .project
firmware/stm32mp13-gfx-ddr/: CMakeLists.txt
firmware/stm32mp13-gfx-ddr/src/bsp/device/: stm32mp13xx_hal_conf.h  syscalls.c  system_stm32mp13xx_A7.c
firmware/stm32mp13-gfx-ddr/src/hw/: hw.c  hw.h  hw_def.h
firmware/stm32mp13-gfx-ddr/src/hw/driver/: ddr.c  loader.c
firmware/stm32mp13-gfx-fsbl/: CMakeLists.txt
firmware/stm32mp13-gfx-fsbl/src/ap/: ap.c
firmware/stm32mp13-gfx-fsbl/src/ap/boot/: boot.c  boot.h
firmware/stm32mp13-gfx-fsbl/src/bsp/: bsp.c
firmware/stm32mp13-gfx-fsbl/src/common/core/: util.c
firmware/stm32mp13-gfx-fsbl/src/hw/: hw.c  hw.h  hw_def.h
firmware/stm32mp13-gfx-fsbl/src/hw/driver/: button.c  emmc.c  led.c  loader.c  ymodem.c
firmware/stm32mp13-gfx-fw/: CMakeLists.txt
firmware/stm32mp13-gfx-fw/src/ap/: ap.c
firmware/stm32mp13-gfx-fw/src/bsp/: bsp.c  bsp_math.h
firmware/stm32mp13-gfx-fw/src/bsp/device/: stm32mp13xx_hal_conf.h
firmware/stm32mp13-gfx-fw/src/bsp/ldscript/: STM32MP135FAFX_DDR.ld
firmware/stm32mp13-gfx-fw/src/common/core/: util.c
firmware/stm32mp13-gfx-fw/src/hw/: hw.c  hw.h  hw_def.h
firmware/stm32mp13-gfx-fw/src/hw/driver/: button.c  sd.c  (+15 more)
firmware/stm32mp13-gfx-fw/src/lib/ST/CMSIS/: CMakeLists.txt  README.md
firmware/stm32mp13-gfx-fw/src/lib/ST/CMSIS/DSP/: README.md
firmware/stm32mp13-gfx-fw/src/lib/ST/CMSIS/DSP/Toolchain/: GCC.cmake
(+21 files in other folders)
